<resources>
    <string name="app_name"> WantHelp</string>
    <string name="titleToolBar">Помочь</string>
    <string name="news_menu">Новости</string>
    <string name="search_menu">Поиск</string>
    <string name="history_menu">История</string>
    <string name="profile_menu">Профиль</string>
    <string name="help_menu">Помощь</string>
    <string name="loadingSplashScreen">Загрузка...</string>
    <string name="subtitleText">Выберите категорию помощи</string>

    <string name="Children">Дети</string>
    <string name="Adults">Взрослые</string>
    <string name="Aged">Пожилые</string>
    <string name="Animals">Животные</string>
    <string name="Arrangement">Мероприятия</string>


    <string name="text_toolbar_profile">Профиль</string>
    <string name="text_toolbar_heart">Помочь</string>

    <string-array name="search_NKO">
        <item>Во имя жизни</item>
        <item>Благотворительный Фонд В. Потанина</item>
        <item>Детские домики</item>
        <item>Мозайка счастья</item>
        <item>Благотворительный Фонд Алины</item>
    </string-array>
</resources>
