<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_news"
        android:icon="@drawable/news"
        android:title="@string/news_menu"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/searh"
        android:title="@string/search_menu"
        app:showAsAction="ifRoom"/>
    <item
        android:icon="@drawable/heart"
        android:title="@string/help_menu"
        android:enabled="true"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_history"
        android:icon="@drawable/history"
        android:title="@string/history_menu" />
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/profile"
        android:title="@string/profile_menu" />

</menu>